--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "notiflix": "^3.2.6",
     "swiper": "^10.0.4",
     "tui-pagination": "^3.4.1",
