--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "notiflix": "^3.2.6",
     "swiper": "^10.0.4",
     "tui-pagination": "^3.4.1",
